# learn_platform

./: .gitignore  README.md  data_dump.json  db_dump.sql  pyproject.toml  pytest.ini
config/: routers.py  settings.py  urls.py
courses/: models.py  pagination.py  querysets.py  serializers.py  serializers_mixins.py  urls.py  validators.py  views.py  viewsets_mixins.py
courses/filters/: __init__.py  course_filter.py
courses/management/commands/: load_data.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_lesson_author.py  0004_alter_course_preview_alter_lesson_preview.py
courses/tests/: factories.py  test_course_subscribe.py  test_courses_viewsets.py  test_lessons_viewsets.py
payment/: admin.py  constants.py  models.py  serializers.py  urls.py  views.py
payment/filters/: __init__.py  payment_filters.py
payment/migrations/: 0001_initial.py  0002_alter_payment_content_type.py  0003_alter_payment_amount.py  0004_alter_payment_amount.py  0005_payment_is_confirmed.py
payment/serializers/: __init__.py  payment_create_serializer.py  payment_info_serializer.py
payment/service/: __init__.py  payment_service.py  service_selector.py  webhooks.py
subscription/: admin.py  models.py
subscription/migrations/: 0001_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py
