[tool.poetry]
name = "course-project"
version = "0.1.0"
description = ""
authors = ["Constantine Putilov <putilov.constantine@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-rest-framework = "^0.1.0"
envparse = "^0.2.0"
django-phonenumber-field = "^7.3.0"
pillow = "^10.2.0"
drf-spectacular = "^0.27.1"
psycopg2 = "^2.9.9"
phonenumbers = "^8.13.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
